--- a/dec.html
+++ b/dec.html
@@ -40,11 +40,11 @@
 
     <div class="pt-24 pb-16 bg-gradient-to-t from-zinc-50">
         <div class="container mx-auto px-7 lg:px-72 ">
-            <h1 class=" text-3xl font-bold lg:text-4xl">Jauh di Luar Dinding Maria</h1>
-            <h4 class=" text-sm mt-2 lg:mt-4 ">December 22, 2022 <span class="ml-1 bg-amber-200 px-2 rounded-full text-xs">4 min read</span></h4>
-            <p class="mt-6 leading-relaxed">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam sapiente quasi, veniam totam dignissimos architecto tempora placeat culpa modi sit maiores repellendus tempore incidunt cupiditate!</p>
+            <h1 class=" text-3xl font-bold lg:text-4xl">Alternatif</h1>
+            <h4 class=" text-sm mt-2 lg:mt-4 ">December 26, 2022 <span class="ml-1 bg-amber-200 px-2 rounded-full text-xs">4 min read</span></h4>
+            <p class="mt-6 leading-relaxed">Kejujuran begitu melegakan, tapi sedikit berbohong rasanya akan jauh lebih menarik. Jujur, mengungkapkan pikiran dan perasaan dengan tepat adalah hal yang sulit. Sebab itu menulis adalah hal yang sulit bagiku, apalagi bicara. Aku membuat laman ini bukan berarti aku suka menulis ataupun pandai merangkai kata. Aku membuat laman ini karena kebetulan aku diajari dosenku yang pintar memrogram.</p>
             <img src="dist/img/gt.svg" alt="">
-            <p class="mt-3 leading-relaxed">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam sapiente quasi, veniam totam dignissimos architecto tempora placeat culpa modi sit maiores repellendus tempore incidunt cupiditate!</p>
+            <p class="mt-3 leading-relaxed">Semuanya berangkat dari kebingungan. Kata orang hongkong memiliki banyak pikiran adalah kepastian. Jika belum pernah, tinggal tunggu momen atau umur, pasti kena. Siapapun yang mengalaminya akan mengatasinya dengan cara yang tak sama. Kebetulan kali ini aku sedang banyak pikiran, tapi aku bingung akan kuapakan pikiran-pikiran ini. Aku terus berpikir dan berpikir.</p>
         </div>
     </div>
     
