--- a/index.html
+++ b/index.html
@@ -49,15 +49,7 @@
                 </div>
                 <div class="w-full pt-12 lg:pt-0 lg:my-auto lg:w-2/3 lg:pl-16 lg:text-justify ">
                     <h1 class=" text-prim block font-bold text-3xl mb-1 lg:text-4xl">Mukadimmah</h1>
-                    <p class=" text-sec text-base leading-relaxed mb-1 lg:text-lg ">Mulai dan coba hal baru adalah
-                        pesan terakhir yang ditulis sahabat penaku. Kebetulan sahabat penaku pilot. Sayang, umurnya
-                        tidak panjang. Harus kuakui itu akibat ulahku. Aku lupa kalau menulis termasuk tindakan yang
-                        perlahan menghabisinya. Kini aku sadar bahwa membeli bulpen lagi bukan opsi yang bagus,
-                        sekalipun itu merk lain. Aku sudah muak dan segera berpaling ke tempat ini. Tempat yang lebih
-                        cocok untuk mengeluarkan isi kepala. Entah itu tulisan, coretan, teriakan, otak kanan, apapun
-                        itu. Siapapun akan bisa mengunjungi tempat ini, walaupun sebenarnya aku kurang suka. Tapi apa
-                        boleh buat, mendadak aku suka pedas. Komentar pedas sedang kucari. Baiklah, berhubung sudah baca
-                        sampai sini, aku ucapkan selamat berkunjung, terimakasih, semoga harimu menyenangkan. Salam.
+                    <p class=" text-sec text-base leading-relaxed mb-1 lg:text-lg ">Bunuhlah rasa penasaran, itu pesan terakhir yang ditulis sahabat penaku. Kebetulan sahabat penaku pilot, sayang kini telah tiada.  Sedih? Tentu tidak. Justru aku puas karena akhirnya aku bisa menghabisinya. Aku sudah bosan dengannya. Aku sadar dia bisa digantikan dengan yang lebih baik, tentu bukan dengan merk bulpen selain pilot, tetapi dengan tempat ini. Konon, tempat seperti ini lebih cocok untuk mengeluarkan isi kepala. Entah itu tulisan, coretan, teriakan, otak kanan, apapun itu. Minusnya siapapun akan bisa mengunjungi tempat ini, itu yang aku kurang suka. Tapi apa boleh buat, pesan pilot ada benarnya. Lagipula aku mendadak suka pedas. Komentar pedas sedang kucari, semoga ketemu. Baik, kuucapkan selamat berkunjung kepada pengunjung, semoga harimu menyenangkan. Salam dan terimakasih.
                     </p>
                 </div>
             </div>
@@ -69,20 +61,14 @@
             <div class="flex flex-wrap">
                 <div class="w-full lg:w-1/2">
                     <a href="memorandom.html"><h1 class="text-prim block font-bold text-3xl mb-1 lg:text-4xl  underline decoration-transparent underline-offset-8 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-300">Memorandom</h1></a>
-                    <p class="text-sec text-base leading-relaxed lg:text-lg lg:text-justify">Tulisan berbobot,
-                        inspiratif, dan
-                        lucu tentunya ada di blog lain, bukan disini. Disini hanya gudang ketikan anak kemarin sore.
-                        Tapi jika tertarik, membaca tulisan disini tak ada salahnya. Banyak hal yang mungkin baru
-                        disadari setelah baca tulisan disini, salah satunya buang-buang waktu. Kabar baiknya, semua
-                        tulisan dibuat dengan rasa gembira. Saking gembiranya, isi dan aturan penulisan pun tak
-                        diperdulikan, bebas. Ingat dan jangan salah, ini Memorandom, bukan Memorandum.
+                    <p class="text-sec text-base leading-relaxed lg:text-lg lg:text-justify">Tulisan kaya makna dan inspirasi sudah dipastikan ada di blog lain, bukan disini. Disini hanya gudang ketikan anak kemarin sore. Tapi jika memang tertarik, membaca tulisan disini tak ada salahnya. Akan ada banyak hal yang mungkin baru disadari setelah baca tulisan disini, salah satunya buang-buang waktu. Menariknya, semua tulisan dibuat dengan rasa gelisah meski nyatanya sedang gembira. Saking gembiranya, alhasil semua tulisan lahir dengan bebas tanpa peduli aturan penulisan yang berlaku. Ingat dan jangan salah, ini Memorandom, bukan Memorandum.
                     </p>
                 </div>
                 <div class="w-full lg:w-1/2 lg:pl-20">
                     <h1 class=" font-semibold mb-3.5 pt-12">Baca Memorandom terbaru:</h1>
                     <a href="dec.html">
                         <li class="list-disc underline decoration-transparent underline-offset-8 font-serif align-bottom mb-4 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
-                            Berbahasa yang jujur</li>
+                            Alternatif </li>
                     </a>
                     <a href="memorandom.html"><li
                         class="list-disc underline decoration-transparent underline-offset-8 font-serif align-bottom hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
@@ -121,10 +107,7 @@
                     <div>
                         <a href="https://www.instagram.com/submisiroom/" target="_blank"><h2 class="text-prim text-xs lg:block lg:font-bold mb-1 lg:text-4xl invisible lg:visible underline decoration-transparent underline-offset-8 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-300">
                             Submisi</h2></a>
-                        <p class="text-sec text-base leading-relaxed lg:mt-0 lg:text-lg lg:text-justify">Lorem ipsum
-                            dolor sit amet consectetur adipisicing elit. Quo dolor deserunt delectus dicta magnam?
-                            Explicabo nisi asperiores exercitationem placeat alias dignissimos facere doloremque illo
-                            inventore!</p>
+                        <p class="text-sec text-base leading-relaxed lg:mt-0 lg:text-lg lg:text-justify">Berhubung sudah pindah ke tempat ini, ada bisikan saran agar tempat ini tak hanya diisi tulisan saja. Ada bisikan yang menyarankan agar diisi dengan foto-foto pribadi yang gaul dan keren. Tapi syukurlah ada yang mengingatkan bahwa itu hanyalah ilusi pribadi. Jadi, ya tidak jadi. Beruntung ada saran yang lain. Sarannya adalah diisi dengan segala sesuatu yang selama ini aku buat selain tulisan. Ini yang lebih masuk akal, siapa tahu ada mengerutkan dahi. Akhirnya aku setuju. Jadi, ya jadi.</p>
                     </div>
                 </div>
             </div>
