--- a/memorandom.html
+++ b/memorandom.html
@@ -51,8 +51,8 @@
                     <div class="w-full mb-10 lg:px-4 lg:w-1/3">
                         <a href="dec.html">
                         <img src="/dist/img/1.JPG" class="rounded shadow-md" alt="">
-                        <h3 class="text-center mt-3 text-lg font-semibold">Jauh di Luar Dinding Maria</h3>
-                        <p class="text-center mt-2 text-sm ">December 21, 2022 <span
+                        <h3 class="text-center mt-3 text-lg font-semibold">Alternatif</h3>
+                        <p class="text-center mt-2 text-sm ">December 26, 2022 <span
                                 class="bg-amber-200 px-2 ml-1 rounded-full">4 min read</span></p>
                         </a>
                     </div>
