--- a/dec.html
+++ b/dec.html
@@ -45,6 +45,7 @@
             <p class="mt-6 leading-relaxed">Kejujuran begitu melegakan, tapi sedikit berbohong rasanya akan jauh lebih menarik. Jujur, mengungkapkan pikiran dan perasaan dengan tepat adalah hal yang sulit. Sebab itu menulis adalah hal yang sulit bagiku, apalagi bicara. Aku membuat laman ini bukan berarti aku suka menulis ataupun pandai merangkai kata. Aku membuat laman ini karena kebetulan aku diajari dosenku yang pintar memrogram.</p>
             <img src="dist/img/gt.svg" alt="">
             <p class="mt-3 leading-relaxed">Semuanya berangkat dari kebingungan. Kata orang hongkong memiliki banyak pikiran adalah kepastian. Jika belum pernah, tinggal tunggu momen atau umur, pasti kena. Siapapun yang mengalaminya akan mengatasinya dengan cara yang tak sama. Kebetulan kali ini aku sedang banyak pikiran, tapi aku bingung akan kuapakan pikiran-pikiran ini. Aku terus berpikir dan berpikir.</p>
+            <img src="dist/img/happ.svg" alt="">
         </div>
     </div>
     
