--- a/dec.html
+++ b/dec.html
@@ -45,7 +45,13 @@
             <p class="mt-6 leading-relaxed">Kejujuran begitu melegakan, tapi sedikit berbohong rasanya akan jauh lebih menarik. Jujur, mengungkapkan pikiran dan perasaan dengan tepat adalah hal yang sulit. Sebab itu menulis adalah hal yang sulit bagiku, apalagi bicara. Aku membuat laman ini bukan berarti aku suka menulis ataupun pandai merangkai kata. Aku membuat laman ini karena kebetulan aku diajari dosenku yang pintar memrogram.</p>
             <img src="dist/img/gt.svg" alt="">
             <p class="mt-3 leading-relaxed">Semuanya berangkat dari kebingungan. Kata orang hongkong memiliki banyak pikiran adalah kepastian. Jika belum pernah, tinggal tunggu momen atau umur, pasti kena. Siapapun yang mengalaminya akan mengatasinya dengan cara yang tak sama. Kebetulan kali ini aku sedang banyak pikiran, tapi aku bingung akan kuapakan pikiran-pikiran ini. Aku terus berpikir dan berpikir.</p>
-            <img src="dist/img/happ.svg" alt="">
+            <p class="mt-3 leading-relaxed">Aku berpikir maka aku bodoh. Semenjak sadar dari ketindihan, aku sama sekali tidak ingin pintar. Menjadi orang pintar hanya akan membuatku sering didatangi orang dan dimintai ramalan gaib. Belum lagi merasa pintar bisa membuatku sombong dan kosong. Kalau misal harus pintar, aku hanya ingin sedikit. Bagiku sedikit pintar membuat semua ambisi tereksekusi, bukan sekadar rencana.</p>
+            <img src="dist/img/happy.svg" alt="">
+            <p class="mt-3 leading-relaxed">Aku tidak tahu apa yang terjadi kedepannya. Aku pun juga tidak tahu hal benar apa yang harus dilakukan remaja seusiaku. Yang kutahu hanyalah terus bergerak di hal yang mungkin kusuka dan jangan terlalu sering main gim. Tak terasa kini sudah hampir ganti tahun dan resolusiku di tahun ini belum nampak hasilnya. Tahun depan aku tak memiliki resolusi tahunan, itu hanya akan membuat gerakanku semakin kaku.</p>
+            <img src="dist/img/happy.svg" alt="">
+            <p class="mt-3 leading-relaxed">Berbicara lebih sulit daripada menulis. Menulis lebih sulit dari membaca. Membaca lebih baik daripada main slot. Begitu isi kepalaku penuh pikiran dan kotoran, aku ingin sekali mengeluarkannya. Kapan hari aku sempat berencana untuk menjadi youtuber dan membungkus pikiranku di dalam konten video. Tapi berhubung skill editing dan storytellingku masih sampah, dengan segera kubuang jauh rencana ini. Lebih baik jadi streamer gaming sudoku dengan backsound musik copyright.</p>
+            <p class="mt-3 leading-relaxed">Singkat cerita aku mencoba membuat video di tiktok. Tapi hanya berisi quote dengan video random plus lagu. Sayang, itu hanya ada di mimpi. Pada akhirnya semua opsi gagal, dan mulai kucoba lagi dari sini. Menulis semua omong kosong ini. Catatan cacat yang bersumber dari bacaanku semenjak bayi. Apa adanya demi mengosongkan sedikit ruang di kepala. </p>
+            <img src="dist/img/happy.svg" alt="">
         </div>
     </div>
     
