--- a/memorandom.html
+++ b/memorandom.html
@@ -50,14 +50,14 @@
                 <div class="flex flex-wrap">
                     <div class="w-full mb-10 lg:px-4 lg:w-1/3">
                         <a href="dec.html">
-                        <img src="/dist/img/1.JPG" class="rounded shadow-md" alt="">
+                        <img src="/dist/img/pintu.jpg" class="rounded shadow-md" alt="">
                         <h3 class="text-center mt-3 text-lg font-semibold">Alternatif</h3>
                         <p class="text-center mt-2 text-sm ">December 26, 2022 <span
                                 class="bg-amber-200 px-2 ml-1 rounded-full">4 min read</span></p>
                         </a>
                     </div>
                     <div class="w-full mb-10 lg:px-4 lg:w-1/3" >
-                        <img src="/dist/img/tiga.png" class="rounded shadow-md" alt="">
+                        <img src="/dist/img/tiga.svg" class="rounded shadow-md" alt="">
                     </div>
                 </div>
             </div>
