--- a/dec.html
+++ b/dec.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="dist/decout.css">
 </head>
+
 <body>
     <header class="bg-transparent bg-opacity-80 absolute top-0 left-0 w-full flex items-center z-10">
         <div class="container mx-auto">
@@ -21,7 +23,7 @@
                         <span class="hamburger-line transition duration-300 ease-in-out origin-bottom-right"></span>
                     </button>
                     <nav id="nav-menu"
-                        class="hidden absolute py-3 bg-white bg-opacity-80 shadow-lg w-full right-0 rounded-b-md top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
+                        class="hidden absolute py-3 bg-white bg-opacity-90 shadow-lg w-full right-0 rounded-b-md top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
                         <ul class="block lg:flex">
                             <li class="group">
                                 <a href="memorandom.html"
@@ -38,10 +40,11 @@
         </div>
     </header>
 
-    <div class="pt-24 pb-16 bg-gradient-to-t from-zinc-50">
-        <div class="container mx-auto px-7 lg:px-72 ">
-            <h1 class=" text-3xl font-bold lg:text-4xl">Alternatif</h1>
-            <h4 class=" text-sm mt-2 lg:mt-4 ">December 26, 2022 <span class="ml-1 bg-amber-200 px-2 rounded-full text-xs">4 min read</span></h4>
+    <div class="pt-24 pb-16 bg-zinc-50">
+        <div class="container mx-auto px-7 lg:px-72">
+            <h1 class=" text-3xl font-bold lg:text-4xl text-prim">Alternatif</h1>
+            <h4 class=" text-sm mt-2 lg:mt-4 text-prim">December 26, 2022 <span class="ml-1 bg-amber-200 px-2 rounded-full text-xs">3 min read</span></h4>
+            <div class="text-sec">
             <p class="mt-6 leading-relaxed">Kejujuran begitu melegakan, tapi sedikit berbohong rasanya akan jauh lebih menarik. Jujur, mengungkapkan pikiran dan perasaan dengan tepat adalah hal yang sulit. Sebab itu menulis adalah hal yang sulit bagiku, apalagi bicara. Aku membuat laman ini bukan berarti aku suka menulis ataupun pandai merangkai kata. Aku membuat laman ini karena kebetulan dosenku mengajar pemrograman.</p>
             <img src="dist/img/pintu.jpg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5">
             <p class="mt-3 leading-relaxed">Semuanya berangkat dari kebingungan. Kata orang hongkong memiliki banyak pikiran adalah kepastian. Jika belum pernah, tinggal tunggu momen atau umur, pasti kena. Siapapun yang mengalami akan mengatasinya dengan cara yang tak sama. Kebetulan kali ini aku sedang banyak pikiran, tapi aku bingung akan kuapakan pikiran-pikiran ini. Aku terus berpikir dan berpikir.</p>
@@ -52,6 +55,7 @@
             <p class="mt-3 leading-relaxed">Bagiku berbicara lebih sulit daripada menulis. Menulis lebih sulit daripada membaca. Membaca lebih baik daripada main slot atau all in tim bola favorit. Begitu isi kepalaku penuh pikiran dan kotoran, aku ingin sekali mengeluarkannya. Kapan hari aku sempat berencana untuk menjadi youtuber dan membungkus pikiranku di dalam konten video. Tapi berhubung skill editing dan storytellingku masih sampah, dengan segera kubuang jauh rencana ini.</p>
             <p class="mt-3 leading-relaxed">Singkat cerita aku ingin mencoba membuat video di tiktok. Tapi hanya berisi quote dengan video random plus lagu, sebab banyak orang yang repost video seperti ini. Sayang, takdir tak merestui. Pada akhirnya semua opsi gagal dan mulai kucoba dari sini. Menulis semua omong kosong ini. Catatan cacat yang bersumber dari bacaanku semenjak bayi. Ngawur dan apa adanya demi mengosongkan sedikit ruang di kepala. </p>
             <img src="dist/img/smile.svg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5">
+            </div>
         </div>
     </div>
      
