--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <span class="hamburger-line transition duration-300 ease-in-out origin-bottom-right"></span>
                     </button>
                     <nav id="nav-menu"
-                        class="hidden absolute py-3 bg-white bg-opacity-80 shadow-lg w-full right-0 rounded-br-lg rounded-bl-lg top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
+                        class="hidden absolute py-3 bg-white bg-opacity-90 shadow-lg w-full right-0 rounded-br-lg rounded-bl-lg top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
                         <ul class="block lg:flex">
                             <li class="group">
                                 <a href="memorandom.html"
@@ -44,56 +44,84 @@
         <div class="container px-7 mx-auto lg:px-32 ">
             <div class="flex flex-wrap">
                 <div class="w-full lg:w-1/3">
-                    <img src="dist/img/satu.svg" alt="gambar" class="satu w-full my-auto mx-auto lg:w-11/12 lg:mx-0" />
-                    <img src="dist/img/profil.svg" alt="gambar" class="satus w-full my-auto mx-auto lg:w-11/12 lg:mx-0 hidden" />
+                    <img src="dist/img/home.svg" alt="gambar" class="satu w-full my-auto mx-auto lg:w-11/12 lg:mx-0" />
+                    <img src="dist/img/face.svg" alt="gambar"
+                        class="satus w-full my-auto mx-auto lg:w-11/12 lg:mx-0 hidden" />
                 </div>
                 <div class="w-full pt-12 lg:pt-0 lg:my-auto lg:w-2/3 lg:pl-16 lg:text-justify ">
                     <h1 class=" text-prim block font-bold text-3xl mb-1 lg:text-4xl">Mukadimmah</h1>
-                    <p class=" text-sec text-base leading-relaxed mb-1 lg:text-lg ">Bunuhlah rasa penasaran, itu pesan terakhir yang ditulis sahabat penaku. Kebetulan sahabat penaku pilot, sayang kini telah tiada.  Sedih? Tentu tidak. Justru aku puas karena akhirnya aku bisa menghabisinya. Aku sudah bosan dengannya. Aku sadar dia bisa digantikan dengan yang lebih baik, tentu bukan dengan merk bulpen selain pilot, tetapi dengan tempat ini. Konon, tempat seperti ini lebih cocok untuk mengeluarkan isi kepala. Entah itu tulisan, coretan, teriakan, otak kanan, apapun itu. Minusnya siapapun akan bisa mengunjungi tempat ini, itu yang aku kurang suka. Tapi apa boleh buat, pesan pilot ada benarnya. Lagipula aku mendadak suka pedas. Komentar pedas sedang kucari, semoga ketemu. Baik, kuucapkan selamat berkunjung kepada pengunjung, semoga harimu menyenangkan. Salam dan terimakasih.
+                    <p class=" text-sec text-base leading-relaxed mb-1 lg:text-lg ">Bunuhlah rasa penasaran, itu pesan
+                        terakhir yang ditulis sahabat penaku. Kebetulan sahabat penaku pilot, sayang kini telah tiada.
+                        Sedih? Tentu tidak. Justru aku puas karena akhirnya aku bisa menghabisinya. Aku sudah bosan
+                        dengannya. Aku sadar dia bisa digantikan dengan yang lebih baik, tentu bukan dengan merk bulpen
+                        selain pilot, tetapi dengan tempat ini. Konon, tempat seperti ini lebih cocok untuk mengeluarkan
+                        isi kepala. Entah itu tulisan, coretan, teriakan, otak kanan, apapun itu. Minusnya siapapun akan
+                        bisa mengunjungi tempat ini, itu yang aku kurang suka. Tapi apa boleh buat, pesan pilot ada
+                        benarnya. Lagipula aku mendadak suka pedas. Komentar pedas sedang kucari, semoga ketemu. Baik,
+                        kuucapkan selamat berkunjung kepada pengunjung, semoga harimu menyenangkan. Salam dan
+                        terimakasih.
                     </p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="memorandom" class="pt-36 pb-16 bg-neutral-200">
+    <section id="memorandom" class="pt-36 pb-16 bg-neutral-100">
         <div class="container px-7 mx-auto my:auto lg:px-32">
             <div class="flex flex-wrap">
                 <div class="w-full lg:w-1/2">
-                    <a href="memorandom.html"><h1 class="text-prim block font-bold text-3xl mb-1 lg:text-4xl  underline decoration-transparent underline-offset-8 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-300">Memorandom</h1></a>
-                    <p class="text-sec text-base leading-relaxed lg:text-lg lg:text-justify">Tulisan kaya makna dan inspirasi sudah dipastikan ada di blog lain, bukan disini. Disini hanya gudang ketikan anak kemarin sore. Tapi jika memang tertarik, membaca tulisan disini tak ada salahnya. Akan ada banyak hal yang mungkin baru disadari setelah baca tulisan disini, salah satunya buang-buang waktu. Menariknya, semua tulisan dibuat dengan rasa gelisah meski nyatanya sedang gembira. Saking gembiranya, alhasil semua tulisan lahir dengan bebas tanpa peduli aturan penulisan yang berlaku. Ingat dan jangan salah, ini Memorandom, bukan Memorandum.
+                    <a href="memorandom.html">
+                        <h1
+                            class="text-prim block font-bold text-3xl mb-1 lg:text-4xl  underline decoration-transparent underline-offset-8 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-300">
+                            Memorandom</h1>
+                    </a>
+                    <p class="text-sec text-base leading-relaxed lg:text-lg lg:text-justify">Tulisan kaya makna dan
+                        inspirasi sudah dipastikan ada di blog lain, bukan disini. Disini hanya gudang ketikan anak
+                        kemarin sore. Tapi jika memang tertarik, membaca tulisan disini tak ada salahnya. Akan ada
+                        banyak hal yang mungkin baru disadari setelah baca tulisan disini, salah satunya buang-buang
+                        waktu. Menariknya, semua tulisan dibuat dengan rasa gelisah meski nyatanya sedang gembira.
+                        Saking gembiranya, alhasil semua tulisan lahir dengan bebas tanpa peduli aturan penulisan yang
+                        berlaku. Ingat dan jangan salah, ini Memorandom, bukan Memorandum.
                     </p>
                 </div>
                 <div class="w-full lg:w-1/2 lg:pl-20">
                     <h1 class=" font-semibold mb-3.5 pt-12">Baca Memorandom terbaru:</h1>
                     <a href="dec.html">
-                        <li class="list-disc underline decoration-transparent underline-offset-8 font-serif align-bottom mb-4 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
+                        <li
+                            class="list-disc underline decoration-transparent underline-offset-8 font-serif align-bottom mb-4 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
                             Alternatif </li>
                     </a>
-                    <a href="memorandom.html"><li
-                        class="list-disc underline decoration-transparent underline-offset-8 font-serif align-bottom hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
-                        Soon..</li>
+                    <a href="memorandom.html">
+                        <li
+                            class="list-disc underline decoration-transparent underline-offset-8 font-serif align-bottom hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
+                            Soon..</li>
                     </a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="submisi" class="pt-36 pb-16 bg-neutral-200 ">
+    <section id="submisi" class="pt-36 pb-16 bg-neutral-100 ">
         <div class="container px-7 mx-auto lg:px-32">
             <div class="flex flex-wrap">
                 <div class=" w-full lg:w-2/5">
-                    <a href="https://www.instagram.com/submisiroom/" target="_blank"><h1 class="text-3xl text-prim block font-bold mb-4 lg:invisible underline decoration-transparent underline-offset-8 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-300">Submisi</h1></a>
+                    <a href="https://www.instagram.com/submisiroom/" target="_blank">
+                        <h1
+                            class="text-3xl text-prim block font-bold mb-4 lg:invisible underline decoration-transparent underline-offset-8 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-300">
+                            Submisi</h1>
+                    </a>
                     <div class="ha">
                         <div class="img-slider">
                             <div class="slide active">
-                                <a href=""><img src="dist/img/profil.png" alt=""></a>
+                                <a href=""><img src="dist/img/submisiroom.png" alt=""></a>
                             </div>
                             <div class="slide">
-                                <a href="https://www.instagram.com/submisiroom/"><img src="dist/img/submisisoon.svg" alt=""></a>
+                                <a href="https://www.instagram.com/submisiroom/"><img src="dist/img/submisisoon.svg"
+                                        alt=""></a>
                             </div>
                             <div class="slide">
-                                <a href="https://www.instagram.com/submisiroom/"><img src="dist/img/submisiig.svg" alt=""></a>
+                                <a href="https://www.instagram.com/submisiroom/"><img src="dist/img/submisiig.svg"
+                                        alt=""></a>
                             </div>
                             <div class="navigation">
                                 <div class="btn active"></div>
@@ -105,16 +133,25 @@
                 </div>
                 <div class="w-full my-auto lg:w-3/5 lg:pl-20 ">
                     <div>
-                        <a href="https://www.instagram.com/submisiroom/" target="_blank"><h2 class="text-prim text-xs lg:block lg:font-bold mb-1 lg:text-4xl invisible lg:visible underline decoration-transparent underline-offset-8 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-300">
-                            Submisi</h2></a>
-                        <p class="text-sec text-base leading-relaxed lg:mt-0 lg:text-lg lg:text-justify">Berhubung sudah pindah ke tempat ini, ada bisikan saran agar tempat ini tak hanya diisi tulisan saja. Ada bisikan yang menyarankan agar diisi dengan foto-foto pribadi yang gaul dan keren. Tapi syukurlah ada yang mengingatkan bahwa itu hanyalah ilusi pribadi. Jadi, ya tidak jadi. Beruntung ada saran yang lain. Sarannya adalah diisi dengan segala sesuatu yang selama ini aku buat selain tulisan. Ini yang lebih masuk akal, siapa tahu ada mengerutkan dahi. Akhirnya aku setuju. Jadi, ya jadi.</p>
+                        <a href="https://www.instagram.com/submisiroom/" target="_blank">
+                            <h2
+                                class="text-prim text-xs lg:block lg:font-bold mb-1 lg:text-4xl invisible lg:visible underline decoration-transparent underline-offset-8 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-300">
+                                Submisi</h2>
+                        </a>
+                        <p class="text-sec text-base leading-relaxed lg:mt-0 lg:text-lg lg:text-justify">Berhubung sudah
+                            pindah ke tempat ini, ada bisikan saran agar tempat ini tak hanya diisi tulisan saja. Ada
+                            bisikan yang menyarankan agar diisi dengan foto-foto pribadi yang gaul dan keren. Tapi
+                            syukurlah ada yang mengingatkan bahwa itu hanyalah ilusi pribadi. Jadi, ya tidak jadi.
+                            Beruntung ada saran yang lain. Sarannya adalah diisi dengan segala sesuatu yang selama ini
+                            aku buat selain tulisan. Ini yang lebih masuk akal, siapa tahu ada mengerutkan dahi.
+                            Akhirnya aku setuju. Jadi, ya jadi.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="komentar" class="pt-36 lg:pt-48 pb-16 bg-neutral-200">
+    <section id="komentar" class="pt-36 lg:pt-48 pb-16 bg-neutral-100">
         <div class="container mx-auto px-7 lg:px-32">
             <div class="w-full ">
                 <div class="max-w-xl mx-auto mb-8">
@@ -166,7 +203,8 @@
                             d="M12 0C8.74 0 8.333.015 7.053.072 5.775.132 4.905.333 4.14.63c-.789.306-1.459.717-2.126 1.384S.935 3.35.63 4.14C.333 4.905.131 5.775.072 7.053.012 8.333 0 8.74 0 12s.015 3.667.072 4.947c.06 1.277.261 2.148.558 2.913.306.788.717 1.459 1.384 2.126.667.666 1.336 1.079 2.126 1.384.766.296 1.636.499 2.913.558C8.333 23.988 8.74 24 12 24s3.667-.015 4.947-.072c1.277-.06 2.148-.262 2.913-.558.788-.306 1.459-.718 2.126-1.384.666-.667 1.079-1.335 1.384-2.126.296-.765.499-1.636.558-2.913.06-1.28.072-1.687.072-4.947s-.015-3.667-.072-4.947c-.06-1.277-.262-2.149-.558-2.913-.306-.789-.718-1.459-1.384-2.126C21.319 1.347 20.651.935 19.86.63c-.765-.297-1.636-.499-2.913-.558C15.667.012 15.26 0 12 0zm0 2.16c3.203 0 3.585.016 4.85.071 1.17.055 1.805.249 2.227.415.562.217.96.477 1.382.896.419.42.679.819.896 1.381.164.422.36 1.057.413 2.227.057 1.266.07 1.646.07 4.85s-.015 3.585-.074 4.85c-.061 1.17-.256 1.805-.421 2.227-.224.562-.479.96-.899 1.382-.419.419-.824.679-1.38.896-.42.164-1.065.36-2.235.413-1.274.057-1.649.07-4.859.07-3.211 0-3.586-.015-4.859-.074-1.171-.061-1.816-.256-2.236-.421-.569-.224-.96-.479-1.379-.899-.421-.419-.69-.824-.9-1.38-.165-.42-.359-1.065-.42-2.235-.045-1.26-.061-1.649-.061-4.844 0-3.196.016-3.586.061-4.861.061-1.17.255-1.814.42-2.234.21-.57.479-.96.9-1.381.419-.419.81-.689 1.379-.898.42-.166 1.051-.361 2.221-.421 1.275-.045 1.65-.06 4.859-.06l.045.03zm0 3.678c-3.405 0-6.162 2.76-6.162 6.162 0 3.405 2.76 6.162 6.162 6.162 3.405 0 6.162-2.76 6.162-6.162 0-3.405-2.76-6.162-6.162-6.162zM12 16c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4zm7.846-10.405c0 .795-.646 1.44-1.44 1.44-.795 0-1.44-.646-1.44-1.44 0-.794.646-1.439 1.44-1.439.793-.001 1.44.645 1.44 1.439z" />
                     </svg>
                 </a>
-                <a href="https://www.tiktok.com/@rickastleyofficial/video/6890858524092402946?is_from_webapp=1&sender_device=pc&web_id=7160259250446599681" target="_blank" class="mr-3 text-zinc-50">
+                <a href="https://www.tiktok.com/@rickastleyofficial/video/6890858524092402946?is_from_webapp=1&sender_device=pc&web_id=7160259250446599681"
+                    target="_blank" class="mr-3 text-zinc-50">
                     <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24"
                         xmlns="http://www.w3.org/2000/svg">
                         <title>TikTok</title>
@@ -174,7 +212,8 @@
                             d="M12.525.02c1.31-.02 2.61-.01 3.91-.02.08 1.53.63 3.09 1.75 4.17 1.12 1.11 2.7 1.62 4.24 1.79v4.03c-1.44-.05-2.89-.35-4.2-.97-.57-.26-1.1-.59-1.62-.93-.01 2.92.01 5.84-.02 8.75-.08 1.4-.54 2.79-1.35 3.94-1.31 1.92-3.58 3.17-5.91 3.21-1.43.08-2.86-.31-4.08-1.03-2.02-1.19-3.44-3.37-3.65-5.71-.02-.5-.03-1-.01-1.49.18-1.9 1.12-3.72 2.58-4.96 1.66-1.44 3.98-2.13 6.15-1.72.02 1.48-.04 2.96-.04 4.44-.99-.32-2.15-.23-3.02.37-.63.41-1.11 1.04-1.36 1.75-.21.51-.15 1.07-.14 1.61.24 1.64 1.82 3.02 3.5 2.87 1.12-.01 2.19-.66 2.77-1.61.19-.33.4-.67.41-1.06.1-1.79.06-3.57.07-5.36.01-4.03-.01-8.05.02-12.07z" />
                     </svg>
                 </a>
-                <a href="https://twitter.com/enzovaldi/status/1596230537257320449?s=20&t=8ajn8raWHab9yO4jOvsqvw" target="_blank" class=" text-zinc-50 mr-3">
+                <a href="https://twitter.com/enzovaldi/status/1596230537257320449?s=20&t=8ajn8raWHab9yO4jOvsqvw"
+                    target="_blank" class=" text-zinc-50 mr-3">
                     <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24"
                         xmlns="http://www.w3.org/2000/svg">
                         <title>Twitter</title>
@@ -234,13 +273,13 @@
         <script>
             const first = document.querySelector('.satu');
             const second = document.querySelector('.satus');
-            
-            first.addEventListener('click', function() {
+
+            first.addEventListener('click', function () {
                 first.classList.toggle('hidden');
                 second.classList.toggle('hidden');
             })
 
-            second.addEventListener('click', function() {
+            second.addEventListener('click', function () {
                 first.classList.toggle('hidden');
                 second.classList.toggle('hidden');
             })
