--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
                         selain pilot, tetapi dengan tempat ini. Konon, tempat seperti ini lebih cocok untuk mengeluarkan
                         isi kepala. Entah itu tulisan, coretan, teriakan, otak kanan, apapun itu. Minusnya siapapun akan
                         bisa mengunjungi tempat ini, itu yang aku kurang suka. Tapi apa boleh buat, pesan pilot ada
-                        benarnya. Lagipula aku mendadak suka pedas. Komentar pedas sedang kucari, semoga ketemu. Baik,
-                        kuucapkan selamat berkunjung kepada pengunjung, semoga harimu menyenangkan. Salam dan
+                        benarnya. Baik, kuucapkan selamat berkunjung kepada pengunjung, semoga harimu menyenangkan. Salam dan
                         terimakasih.
                     </p>
                 </div>
@@ -138,8 +137,8 @@
                                 class="text-prim text-xs lg:block lg:font-bold mb-1 lg:text-4xl invisible lg:visible underline decoration-transparent underline-offset-8 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-300">
                                 Submisi</h2>
                         </a>
-                        <p class="text-sec text-base leading-relaxed lg:mt-0 lg:text-lg lg:text-justify">Berhubung sudah
-                            pindah ke tempat ini, ada bisikan saran agar tempat ini tak hanya diisi tulisan saja. Ada
+                        <p class="text-sec text-base leading-relaxed lg:mt-0 lg:text-lg lg:text-justify">Berhubung tempat
+                            ini serbaguna, ada bisikan saran agar tempat ini tak hanya diisi tulisan saja. Ada
                             bisikan yang menyarankan agar diisi dengan foto-foto pribadi yang gaul dan keren. Tapi
                             syukurlah ada yang mengingatkan bahwa itu hanyalah ilusi pribadi. Jadi, ya tidak jadi.
                             Beruntung ada saran yang lain. Sarannya adalah diisi dengan segala sesuatu yang selama ini
@@ -154,26 +153,28 @@
     <section id="komentar" class="pt-36 lg:pt-48 pb-16 bg-neutral-100">
         <div class="container mx-auto px-7 lg:px-32">
             <div class="w-full ">
-                <div class="max-w-xl mx-auto mb-8">
-                    <h2 class="font-bold text-prim text-center text-3xl lg:text-4xl">Komentar</h2>
-
+                <div class="box w-full lg:w-2/3 mx-auto mb-8">
+                    <h2 class="font-bold text-prim  lg:text-center text-3xl lg:text-4xl">Box<span class="inline-block ml-2"><img src="dist/img/info.png" alt="" class="h-4"></span></h2>
+                </div>
+                <div class="nobox w-full lg:w-2/3 mx-auto mb-8 hidden">
+                    <h2 class="font-bold text-prim block lg:text-center text-3xl lg:text-4xl">Box<span class="inline-block ml-2"><img src="dist/img/info.png" alt="" class="h-4"></span></h2><p>Terjebak dalam pandangan dan pikiran yang sempit adalah hal yang berbahaya. Aku tidak mau itu terjadi. Siapa tahu ada yang punya masukan atau cibiran tentang tempat ini, itu akan sangat membantu. Silahkan langsung dikirim. </p>
                 </div>
             </div>
             <form name="komentar">
                 <div class="w-full lg:w-2/3 mx-auto">
                     <div class="w-full mb-8">
                         <input type="text" id="name" placeholder="Nama/Anonim" name="nama"
-                            class="w-full bg-zinc-50 rounded-md text-prim p-3 focus:outline-none focus:ring-prim focus:ring-1 focus:border-prim" />
+                            class="w-full bg-neutral-200 bg-opacity-80 rounded-md text-prim p-3 focus:outline-none focus:ring-prim focus:ring-1 focus:border-prim" />
                     </div>
                     <div class="w-full mb-8">
                         <textarea type="text" id="pesan" placeholder="Isi terserah" name="komentar"
-                            class="w-full bg-zinc-50 rounded-md text-prim p-3 focus:outline-none focus:ring-prim focus:ring-1 focus:border-prim h-28"></textarea>
+                            class="w-full bg-neutral-200 bg-opacity-80 rounded-md text-prim p-3 focus:outline-none focus:ring-prim focus:ring-1 focus:border-prim h-28"></textarea>
                     </div>
                     <div class="w-full">
                         <button type="submit"
-                            class="kirim text-base font-bold bg-zinc-50 rounded-full py-3 px-8 w-full hover:opacity-80  hover:shadow-lg hover:scale-x-105 ease-in transition duration-200 mb-3 text-sec">Kirim</button>
+                            class="kirim text-base font-bold bg-neutral-200 bg-opacity-80 rounded-full py-3 px-8 w-full hover:opacity-80  hover:shadow-lg hover:scale-x-105 ease-in transition duration-200 mb-3 text-sec">Kirim</button>
                         <button type="button"
-                            class="loading font-bold bg-zinc-50 rounded-full py-3 px-8 w-full hover:opacity-80  hover:shadow-lg hover:scale-x-105 ease-in transition duration-200 invisible ">
+                            class="loading font-bold bg-neutral-200 bg-opacity-80 rounded-full py-3 px-8 w-full hover:opacity-80  hover:shadow-lg hover:scale-x-105 ease-in transition duration-200 invisible ">
                             <div class="flex justify-center items-center">
                                 <div class="spinner-border animate-spin inline-block w-6 h-6 border-4 rounded-full"
                                     role="status">
@@ -181,9 +182,9 @@
                             </div>
                         </button>
                     </div>
-                    <div class="alert bg-zinc-50 rounded-full px-8 py-3 lg:py-1 font-medium text-sec flex items-center w-full alert-dismissible fade show mx-auto invisible"
+                    <div class="alert bg-neutral-200 bg-opacity-80 rounded-full px-8 py-3 lg:py-1 font-medium text-sec flex items-center w-full alert-dismissible fade show mx-auto invisible"
                         role="alert">
-                        Terimakasih sudah berkomentar dan membuang waktu ke tempat ini
+                        Sudah terkirim, terimakasih sudah berkunjung kesini
                         <button type="button" class="silang text-4xl ml-auto text-sec mb-2">×
                         </button>
                     </div>
@@ -282,6 +283,21 @@
             second.addEventListener('click', function () {
                 first.classList.toggle('hidden');
                 second.classList.toggle('hidden');
+            })
+
+        </script>
+        <script>
+            const box = document.querySelector('.box');
+            const nobox = document.querySelector('.nobox');
+
+            box.addEventListener('click', function () {
+                box.classList.toggle('hidden');
+                nobox.classList.toggle('hidden');
+            })
+
+            nobox.addEventListener('click', function () {
+                box.classList.toggle('hidden');
+                nobox.classList.toggle('hidden');
             })
 
         </script>
