--- a/dec.html
+++ b/dec.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,27 +43,58 @@
     <div class="pt-24 pb-16 bg-zinc-50">
         <div class="container mx-auto px-7 lg:px-72">
             <h1 class=" text-3xl font-bold lg:text-4xl text-prim">Alternatif</h1>
-            <h4 class=" text-sm mt-2 lg:mt-4 text-prim">December 26, 2022 <span class="ml-1 bg-amber-200 px-2 rounded-full text-xs">3 min read</span></h4>
+            <h4 class=" text-sm mt-2 lg:mt-4 text-prim">December 26, 2022 <span
+                    class="ml-1 bg-amber-200 px-2 rounded-full text-xs">3 min read</span></h4>
             <div class="text-sec">
-            <p class="mt-6 leading-relaxed">Kejujuran begitu melegakan, tapi sedikit berbohong rasanya akan jauh lebih menarik. Jujur, mengungkapkan pikiran dan perasaan dengan tepat adalah hal yang sulit. Sebab itu menulis adalah hal yang sulit bagiku, apalagi bicara. Aku membuat laman ini bukan berarti aku suka menulis ataupun pandai merangkai kata. Aku membuat laman ini karena kebetulan dosenku mengajar pemrograman.</p>
-            <img src="dist/img/pintu.jpg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5">
-            <p class="mt-3 leading-relaxed">Semuanya berangkat dari kebingungan. Kata orang hongkong memiliki banyak pikiran adalah kepastian. Jika belum pernah, tinggal tunggu momen atau umur, pasti kena. Siapapun yang mengalami akan mengatasinya dengan cara yang tak sama. Kebetulan kali ini aku sedang banyak pikiran, tapi aku bingung akan kuapakan pikiran-pikiran ini. Aku terus berpikir dan berpikir.</p>
-            <p class="mt-3 leading-relaxed">Aku berpikir maka aku bodoh. Semenjak sadar dari ketindihan, aku sama sekali tidak ingin pintar. Menjadi orang pintar hanya akan membuat orang datang dan beli bulu perindu kepadaku. Belum lagi menjadi pintar bisa membuatku merasa sombong dan kosong. Kalau misal harus pintar, aku hanya ingin sedikit. Bagiku sedikit pintar membuat semua ambisi tereksekusi, bukan sekadar rencana.</p>
-            <img src="dist/img/seram.svg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5">
-            <p class="mt-3 leading-relaxed">Aku tidak tahu apa yang terjadi kedepannya. Aku pun juga tidak tahu hal benar apa yang harus dilakukan remaja seusiaku. Yang kutahu hanyalah terus bergerak di hal yang mungkin kusuka dan jangan terlalu sering main gim. Tak terasa pula akan ganti tahun dan resolusiku di tahun ini belum nampak hasilnya. Tahun depan aku putuskan tak memiliki resolusi apapun, toh kamera hpku sudah memilikinya.</p>
-            <img src="dist/img/happy.svg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5">
-            <p class="mt-3 leading-relaxed">Bagiku berbicara lebih sulit daripada menulis. Menulis lebih sulit daripada membaca. Membaca lebih baik daripada main slot atau all in tim bola favorit. Begitu isi kepalaku penuh pikiran dan kotoran, aku ingin sekali mengeluarkannya. Kapan hari aku sempat berencana untuk menjadi youtuber dan membungkus pikiranku di dalam konten video. Tapi berhubung skill editing dan storytellingku masih sampah, dengan segera kubuang jauh rencana ini.</p>
-            <p class="mt-3 leading-relaxed">Singkat cerita aku ingin mencoba membuat video di tiktok. Tapi hanya berisi quote dengan video random plus lagu, sebab banyak orang yang repost video seperti ini. Sayang, takdir tak merestui. Pada akhirnya semua opsi gagal dan mulai kucoba dari sini. Menulis semua omong kosong ini. Catatan cacat yang bersumber dari bacaanku semenjak bayi. Ngawur dan apa adanya demi mengosongkan sedikit ruang di kepala. </p>
-            <img src="dist/img/smile.svg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5">
+                <p class="mt-6 leading-relaxed">Kejujuran begitu melegakan, tapi sedikit berbohong rasanya akan jauh
+                    lebih menarik. Jujur, mengungkapkan pikiran dan perasaan dengan tepat adalah hal yang sulit. Sebab
+                    itu menulis adalah hal yang sulit bagiku, apalagi bicara. Aku membuat laman ini bukan berarti aku
+                    suka menulis ataupun pandai merangkai kata. Aku membuat laman ini karena kebetulan dosenku mengajar
+                    pemrograman.</p>
+                <img src="dist/img/pintu.jpg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5">
+                <p class="mt-3 leading-relaxed">Semuanya berangkat dari kebingungan. Kata orang hongkong memiliki banyak
+                    pikiran adalah kepastian. Jika belum pernah, tinggal tunggu momen atau umur, pasti kena. Siapapun
+                    yang mengalami akan mengatasinya dengan cara yang tak sama. Kebetulan kali ini aku sedang banyak
+                    pikiran, tapi aku bingung akan kuapakan pikiran-pikiran ini. Aku terus berpikir dan berpikir.</p>
+                <p class="mt-3 leading-relaxed">Aku berpikir maka aku bodoh. Semenjak sadar dari ketindihan, aku sama
+                    sekali tidak ingin pintar. Menjadi orang pintar hanya akan membuat orang datang dan beli bulu
+                    perindu kepadaku. Belum lagi menjadi pintar bisa membuatku merasa sombong dan kosong. Kalau misal
+                    harus pintar, aku hanya ingin sedikit. Bagiku sedikit pintar membuat semua ambisi tereksekusi, bukan
+                    sekadar rencana.</p>
+                <img src="dist/img/seram.svg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5">
+                <p class="mt-3 leading-relaxed">Aku tidak tahu apa yang terjadi kedepannya. Aku pun juga tidak tahu hal
+                    benar apa yang harus dilakukan remaja seusiaku. Yang kutahu hanyalah terus bergerak di hal yang
+                    mungkin kusuka dan jangan terlalu sering main gim. Tak terasa pula akan ganti tahun dan resolusiku
+                    di tahun ini belum nampak hasilnya. Tahun depan aku putuskan tak memiliki resolusi apapun, toh
+                    kamera hpku sudah memilikinya.</p>
+                <img src="dist/img/happy.svg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5">
+                <p class="mt-3 leading-relaxed">Bagiku berbicara lebih sulit daripada menulis. Menulis lebih sulit
+                    daripada membaca. Membaca lebih baik daripada main slot atau all in tim bola favorit. Begitu isi
+                    kepalaku penuh pikiran dan kotoran, aku ingin sekali mengeluarkannya. Kapan hari aku sempat
+                    berencana untuk menjadi youtuber dan membungkus pikiranku di dalam konten video. Tapi berhubung
+                    skill editing dan storytellingku masih sampah, dengan segera kubuang jauh rencana ini.</p>
+                <p class="mt-3 leading-relaxed">Singkat cerita aku ingin mencoba membuat video di tiktok. Tapi hanya
+                    berisi quote dengan video random plus lagu, sebab banyak orang yang repost video seperti ini.
+                    Sayang, takdir tak merestui. Pada akhirnya semua opsi gagal dan mulai kucoba dari sini. Menulis
+                    semua omong kosong ini. Catatan cacat yang bersumber dari bacaanku semenjak bayi. Ngawur dan apa
+                    adanya demi mengosongkan sedikit ruang di kepala. </p>
+                <a href="https://www.youtube.com/watch?v=nWK0kqjPSVI&list=RDnWK0kqjPSVI&start_radio=1"><img
+                        src="dist/img/smile.svg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5"></a>
             </div>
         </div>
     </div>
-     
-    <section id="komentar" class="pt-36 lg:pt-48 pb-16">
+
+    <section id="komentar" class="pt-28 lg:pt-48 pb-16 bg-zinc-50">
         <div class="container mx-auto px-7 lg:px-32">
             <div class="w-full ">
-                <div class="mx-auto mb-8 lg:w-2/3">
-                    <h2 class="font-bold text-prim  text-3xl lg:text-4xl">Komentar</h2>
+                <div class="box mx-auto mb-8 lg:w-2/3">
+                    <h2 class="font-bold text-prim  text-3xl lg:text-4xl">Komentar<span class="inline-block ml-2"><img
+                                src="dist/img/info.png" alt="" class="h-4"></span></h2>
+                </div>
+                <div class="nobox hidden mx-auto mb-8 lg:w-2/3">
+                    <h2 class=" font-bold text-prim  text-3xl lg:text-4xl">Komentar<span class="inline-block ml-2"><img
+                                src="dist/img/info.png" alt="" class="h-4"></span></h2>
+                    <p>Komentar hanya akan dikirim dan tidak akan ditampilkan disini.</p>
                 </div>
             </div>
             <form name="komentar">
@@ -90,7 +121,7 @@
                     </div>
                     <div class="alert bg-neutral-200 bg-opacity-80 rounded-full px-8 py-3 lg:py-1 font-medium text-sec flex items-center w-full alert-dismissible fade show mx-auto invisible"
                         role="alert">
-                        Terimakasih sudah berkomentar dan menghabiskan waktu disini 
+                        Terimakasih sudah berkomentar dan menghabiskan waktu disini
                         <button type="button" class="silang text-4xl ml-auto text-sec mb-2">×
                         </button>
                     </div>
@@ -175,5 +206,20 @@
                 .catch(error => console.error('Error!', error.message))
         })
     </script>
+    <script>
+        const box = document.querySelector('.box');
+        const nobox = document.querySelector('.nobox');
+
+        box.addEventListener('click', function () {
+            box.classList.toggle('hidden');
+            nobox.classList.toggle('hidden');
+        })
+
+        nobox.addEventListener('click', function () {
+            box.classList.toggle('hidden');
+            nobox.classList.toggle('hidden');
+        })
+    </script>
 </body>
+
 </html>
