--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                         selain pilot, tetapi dengan tempat ini. Konon, tempat seperti ini lebih cocok untuk mengeluarkan
                         isi kepala. Entah itu tulisan, coretan, teriakan, otak kanan, apapun itu. Minusnya siapapun akan
                         bisa mengunjungi tempat ini, itu yang aku kurang suka. Tapi apa boleh buat, pesan pilot ada
-                        benarnya. Baik, kuucapkan selamat berkunjung kepada pengunjung, semoga harimu menyenangkan. Salam dan
+                        benarnya. Baik, kuucapkan selamat berkunjung kepada pengunjung, semoga harimu menyenangkan.
+                        Salam dan
                         terimakasih.
                     </p>
                 </div>
@@ -89,11 +90,6 @@
                         <li
                             class="list-disc underline decoration-transparent underline-offset-8 font-serif align-bottom mb-4 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
                             Alternatif </li>
-                    </a>
-                    <a href="memorandom.html">
-                        <li
-                            class="list-disc underline decoration-transparent underline-offset-8 font-serif align-bottom hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
-                            Soon..</li>
                     </a>
                 </div>
             </div>
@@ -137,7 +133,8 @@
                                 class="text-prim text-xs lg:block lg:font-bold mb-1 lg:text-4xl invisible lg:visible underline decoration-transparent underline-offset-8 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-300">
                                 Submisi</h2>
                         </a>
-                        <p class="text-sec text-base leading-relaxed lg:mt-0 lg:text-lg lg:text-justify">Berhubung tempat
+                        <p class="text-sec text-base leading-relaxed lg:mt-0 lg:text-lg lg:text-justify">Berhubung
+                            tempat
                             ini serbaguna, ada bisikan saran agar tempat ini tak hanya diisi tulisan saja. Ada
                             bisikan yang menyarankan agar diisi dengan foto-foto pribadi yang gaul dan keren. Tapi
                             syukurlah ada yang mengingatkan bahwa itu hanyalah ilusi pribadi. Jadi, ya tidak jadi.
@@ -154,10 +151,15 @@
         <div class="container mx-auto px-7 lg:px-32">
             <div class="w-full ">
                 <div class="box w-full lg:w-2/3 mx-auto mb-8">
-                    <h2 class="font-bold text-prim  lg:text-center text-3xl lg:text-4xl">Box<span class="inline-block ml-2"><img src="dist/img/info.png" alt="" class="h-4"></span></h2>
+                    <h2 class="font-bold text-prim  lg:text-center text-3xl lg:text-4xl">Box<span
+                            class="inline-block ml-2"><img src="dist/img/info.png" alt="" class="h-4"></span></h2>
                 </div>
                 <div class="nobox w-full lg:w-2/3 mx-auto mb-8 hidden">
-                    <h2 class="font-bold text-prim block lg:text-center text-3xl lg:text-4xl">Box<span class="inline-block ml-2"><img src="dist/img/info.png" alt="" class="h-4"></span></h2><p>Terjebak dalam pandangan dan pikiran yang sempit adalah hal yang berbahaya. Aku tidak mau itu terjadi. Siapa tahu ada yang punya masukan atau cibiran tentang tempat ini, itu akan sangat membantu. Silahkan langsung dikirim. </p>
+                    <h2 class="font-bold text-prim block lg:text-center text-3xl lg:text-4xl">Box<span
+                            class="inline-block ml-2"><img src="dist/img/info.png" alt="" class="h-4"></span></h2>
+                    <p>Terjebak dalam pandangan dan pikiran yang sempit adalah hal yang berbahaya. Aku tidak mau itu
+                        terjadi. Siapa tahu ada yang punya masukan atau cibiran tentang tempat ini, itu akan sangat
+                        membantu. Silahkan langsung dikirim. </p>
                 </div>
             </div>
             <form name="komentar">
@@ -299,7 +301,6 @@
                 box.classList.toggle('hidden');
                 nobox.classList.toggle('hidden');
             })
-
         </script>
         <script type="text/javascript">
             var slides = document.querySelectorAll('.slide');
