--- a/dec.html
+++ b/dec.html
@@ -78,7 +78,7 @@
                     Sayang, takdir tak merestui. Pada akhirnya semua opsi gagal dan mulai kucoba dari sini. Menulis
                     semua omong kosong ini. Catatan cacat yang bersumber dari bacaanku semenjak bayi. Ngawur dan apa
                     adanya demi mengosongkan sedikit ruang di kepala. </p>
-                <a href="https://www.youtube.com/watch?v=nWK0kqjPSVI&list=RDnWK0kqjPSVI&start_radio=1"><img
+                <a href="https://www.youtube.com/watch?v=StqioKCPqF8"><img
                         src="dist/img/smile.svg" alt="" class="w-full md:w-3/5 md:mx-auto mt-5 mb-5"></a>
             </div>
         </div>
