--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container mx-auto">
             <div class="flex items-center justify-between relative">
                 <div class="px-7 lg:px-32">
-                    <a href="#home" class="font-bold text-lg text-prim block py-6 ">Azkan Nawal</a>
+                    <a href="azkannawal.space" class="font-bold text-lg text-prim block py-6 ">Azkan Nawal</a>
                 </div>
                 <div class="flex items-center px-7 lg:px-32">
                     <button id="hamburger" name="hamburger" type="button" class="block absolute right-7 lg:hidden">
@@ -26,7 +26,7 @@
                         class="hidden absolute py-3 bg-white bg-opacity-90 shadow-lg w-full right-0 rounded-br-lg rounded-bl-lg top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
                         <ul class="block lg:flex">
                             <li class="group">
-                                <a href="memorandom.html"
+                                <a href="./memorandom"
                                     class="text-base font-medium text-prim py-2 mx-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Memorandom</a>
                             </li>
                             <li class="group">
@@ -70,7 +70,7 @@
         <div class="container px-7 mx-auto my:auto lg:px-32">
             <div class="flex flex-wrap">
                 <div class="w-full lg:w-1/2">
-                    <a href="memorandom.html">
+                    <a href="./memorandom">
                         <h1
                             class="text-prim block font-bold text-3xl mb-1 lg:text-4xl  underline decoration-transparent underline-offset-8 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-300">
                             Memorandom</h1>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="w-full lg:w-1/2 lg:pl-20">
                     <h1 class=" font-semibold mb-3.5 pt-12">Baca Memorandom terbaru:</h1>
-                    <a href="dec.html">
+                    <a href="./dec">
                         <li
                             class="list-disc underline decoration-transparent underline-offset-8 font-serif align-bottom mb-4 hover:decoration-amber-300 hover:decoration-2 hover:transition-all ease-linear duration-700">
                             Alternatif </li>
@@ -111,7 +111,7 @@
                                 <a href=""><img src="dist/img/submisiroom.png" alt=""></a>
                             </div>
                             <div class="slide">
-                                <a href="https://www.instagram.com/submisiroom/"><img src="dist/img/submisisoon.svg"
+                                <a href="https://www.instagram.com/submisiroom/"><img src="dist/img/paint.jpg"
                                         alt=""></a>
                             </div>
                             <div class="slide">
