--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container mx-auto">
             <div class="flex items-center justify-between relative">
                 <div class="px-7 lg:px-32">
-                    <a href="azkannawal.space" class="font-bold text-lg text-prim block py-6 ">Azkan Nawal</a>
+                    <a href="./" class="font-bold text-lg text-prim block py-6 ">Azkan Nawal</a>
                 </div>
                 <div class="flex items-center px-7 lg:px-32">
                     <button id="hamburger" name="hamburger" type="button" class="block absolute right-7 lg:hidden">
@@ -30,7 +30,7 @@
                                     class="text-base font-medium text-prim py-2 mx-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Memorandom</a>
                             </li>
                             <li class="group">
-                                <a href="#submisi"
+                                <a href="./submisi"
                                     class="text-base font-medium text-prim py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Submisi</a>
                             </li>
                         </ul>
