--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                                     class="text-base font-medium text-prim py-2 mx-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Memorandom</a>
                             </li>
                             <li class="group">
-                                <a href="./submisi"
+                                <a href="https://www.instagram.com/submisiroom/"
                                     class="text-base font-medium text-prim py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Submisi</a>
                             </li>
                         </ul>
