--- a/memorandom.html
+++ b/memorandom.html
@@ -15,7 +15,7 @@
             <div class="container mx-auto">
                 <div class="flex items-center justify-between relative">
                     <div class="px-7 lg:px-32">
-                        <a href="index.html" class="font-bold text-lg text-prim block py-6 ">Azkan Nawal</a>
+                        <a href="./" class="font-bold text-lg text-prim block py-6 ">Azkan Nawal</a>
                     </div>
                     <div class="flex items-center px-7 lg:px-32">
                         <button id="hamburger" name="hamburger" type="button" class="block absolute right-7 lg:hidden">
@@ -27,11 +27,11 @@
                             class="hidden absolute py-3 bg-white bg-opacity-80 shadow-lg w-full right-0 rounded-b-md top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
                             <ul class="block lg:flex">
                                 <li class="group">
-                                    <a href="memorandom.html"
+                                    <a href="./memorandom"
                                         class="text-base font-medium text-prim py-2 mx-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Memorandom</a>
                                 </li>
                                 <li class="group">
-                                    <a href="index.html#submisi"
+                                    <a href="https://www.instagram.com/submisiroom/"
                                         class="text-base font-medium text-prim py-2 mx-8 lg:mx-0 lg:ml-8 flex lg:group-hover:scale-105 group-hover:underline group-hover:underline-offset-8 group-hover:decoration-amber-300 group-hover:decoration-2 group-hover:transition-all ease-in-out duration-300 ">Submisi</a>
                                 </li>
                             </ul>
@@ -49,7 +49,7 @@
             <div class="container mx-auto px-7 lg:px-32 ">
                 <div class="flex flex-wrap">
                     <div class="w-full mb-10 lg:px-4 lg:w-1/3">
-                        <a href="dec.html">
+                        <a href="./dec">
                             <img src="/dist/img/pintu.jpg" class="rounded shadow-md" alt="">
                             <h3 class="text-center mt-3 text-lg font-semibold text-prim">Alternatif</h3>
                             <p class="text-prim text-center mt-2 text-sm ">December 26, 2022 <span
